--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
 body {
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
+  padding-bottom: 60px; /* Увеличиваем нижний отступ для панель навигации */
 }
